[project]
name = "gnmi"
version = "0.7.4"
maintainers = [{name = "Jesse Mather", email = "jrmather@protonmail.com"}]
license = "MIT"
license-files = ["LICENSE"]
description = "Python gNMI client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.71.0",
    "protobuf>=6.33.6",
]

[project.optional-dependencies]
cli = [
    "click>=8.4.1",
    "click-config-file>=0.6.0",
    "pyyaml>=6.0.2",
    "rich>=15.0.0",
    "toml>=0.10.2",
]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[dependency-groups]
test = [
    "pyyaml",
    "pytest>=8.3.5",
    "pytest-cov",
    "ruff>=0.11.10",
    "toml>=0.10.2",
    "pytest-asyncio>=1.4.0",
]

dev = [
    {include-group = "test"},
    "grpc-stubs>=1.53.0.6",
    "grpcio-tools>=1.71.0",
    "sphinx>=7.4.7",
    "types-protobuf>=7.34.1.20260518",
    "types-pyyaml>=6.0.12.20260518",
]

[project.scripts]
gnmip = "gnmi:entry.main"

[tool.pytest.ini_options]
junit_family = "xunit2"
filterwarnings = [
    "ignore::DeprecationWarning:google.*"
]
asyncio_mode = "auto"


[tool.ruff]
exclude = [
    "gnmi/proto",
]

[tool.tox]
requires = ["tox>=4.26"]
env_list = ["3.10", "3.11", "3.12", "3.13", "3.14", "ruff"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
uv_sync_flags = ["--all-extras"]
description = "Run test under {base_python}"
commands = [["pytest"]]

[tool.tox.env.ruff]
description = "lint source code"
runner = "uv-venv-lock-runner"
uv_sync_flags = ["--all-extras"]
commands = [
    ["ruff", "check", "."],
    ["ruff", "format", "--check", "."]
]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
exclude = [
    "proto",
    "^proto/.*\\.py$"
]

[[tool.mypy.overrides]]
module = ["gnmi.proto.*"]
ignore_errors = true

[tool.pyright]
venvPath = "."
venv = ".venv"
